<resources>
    <string name="app_name">TercerProyecto</string>
    <string name="title_activity_list">Listar libros</string>
    <string name="list2">Leer 2</string>
    <string name="delete_all">Borrar la lista</string>
    <string name="delete_all_label">Eliminar 2</string>
    <string name="delete_all_success">Se eliminaron todos los elementos de la colección</string>
    <string name="delete_all_fail">Ocurrió un error al eliminar todos los registros</string>
    <string name="book_title">Titulo</string>
    <string name="find_book">Buscar</string>
    <string name="book_name" >Nombre</string>
    <string name="book_author">Autor</string>
    <string name="find">Leer 1</string>
    <string name="delete_book">Eliminar</string>
    <string name="delete_book_success">Elemento borrado de manera exitosa</string>
    <string name="delte_book_error">Ocurrió un error al borrar el libro</string>
    <string name="delete">Eliminar 1</string>
    <string name="update">Actualizar libro</string>
    <string name="create">Crear libro</string>
    <string name="book_name_missing">El libro debe tener un nombre</string>
    <string name="book_author_missing">El libro debe tener un autor</string>
    <string name="book_page_number_mising">El libro debe tener un número de páginas</string>
    <string name="save_book_success">Libro guardado correctamente</string>
    <string name="save_book_error">Ocurrió un error al guardado el libro</string>
    <string name="book_price">Precio</string>
    <string name="book_num_pages">Número de páginas</string>
    <string name="book_price_missing">El libro debe tener un precio</string>
    <string name="book_not_found">Book not found</string>
    <string name="error_find_no_name">Debe entrar un nombre</string>
    <string name="error_load_books">There was an error loading the list of books</string>
    <string name="book_list_empty">There are no books</string>
    <string name="book_parsing_error">Hubo un error parseando el libro</string>
    <string name="book_search_error">Hubo un error buscando el libro</string>
    <string name="search_activity">Buscar por autor</string>
    <string name="book_new_price">Nuevo precio</string>
    <string name="update_price">Actualizar precio</string>
    <string name="book_new_price_missing">Debe ingresar un nuevo precio</string>
    <string name="update_error">Error cambiando el precio del libro</string>
    <string name="update_succesfull">Libro actualizado correctamente</string>
    <string name="bookicon">bookIcon</string>
    <string name="calc">Calc</string>
</resources>
